# thermal-risk-profiler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ASSUMPTIONS.md
src/thermal_risk_profiler/: __init__.py  cli.py  engine.py  schemas.py
tests/: test_engine_smoke.py
